# CryptoExchangeEmulator

./: README.md  app.py  pyproject.toml
src/: __init__.py  asgi.py
src/assets/: style.css  websocket.js
src/domain/web/: controllers.py
src/domain/websockets/: controllers.py
src/server/: config.py  core.py  custom_websocket.py
src/services/: exchange_auth.py
src/templates/: index.html.jinja2
