[tool.poetry]
name = "CryptoExchangEemulator"
version = "0.1.0"
description = ""
authors = ["Vladislav Marahovskiy <vladislav.marahovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
